build-logs-failed/build-jwt-0.11.0.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - jwt-0.11.0 (lib) (first run)
 - jwt-0.11.0 (test:testsuite) (first run)
 - jwt-0.11.0 (test:doctests) (first run)
Warning: jwt.cabal:16:28: Packages with 'cabal-version: 1.12' or later should
specify a specific version of the Cabal spec of the form 'cabal-version: x.y'.
Use 'cabal-version: 1.16'.
Configuring library for jwt-0.11.0...
Preprocessing library for jwt-0.11.0...
Building library for jwt-0.11.0...
[1 of 3] Compiling Data.ByteString.Extended
[2 of 3] Compiling Data.Text.Extended
[3 of 3] Compiling Web.JWT
Warning: jwt.cabal:16:28: Packages with 'cabal-version: 1.12' or later should
specify a specific version of the Cabal spec of the form 'cabal-version: x.y'.
Use 'cabal-version: 1.16'.
Configuring test suite 'testsuite' for jwt-0.11.0...
Preprocessing test suite 'testsuite' for jwt-0.11.0...
Building test suite 'testsuite' for jwt-0.11.0...
[1 of 9] Compiling Data.ByteString.Extended
[2 of 9] Compiling Data.ByteString.ExtendedTests
[3 of 9] Compiling Data.Text.Extended
[4 of 9] Compiling Data.Text.ExtendedTests
[5 of 9] Compiling Web.JWT
[6 of 9] Compiling Web.JWTInteropTests

tests/src/Web/JWTInteropTests.hs:59:38: error: [GHC-83865]
    • Couldn't match expected type ‘Key’ with actual type ‘T.Text’
    • In the first argument of ‘key’, namely ‘key'’
      In the second argument of ‘(^?)’, namely ‘key key'’
      In the expression: toJSON claims' ^? key key'
   |
59 |     let json = toJSON claims' ^? key key'
   |                                      ^^^^
[7 of 9] Compiling Web.JWTTests
[8 of 9] Compiling Web.JWTTestsCompat
Error: [Cabal-7125]
Failed to build test:testsuite from jwt-0.11.0.

